--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "thought-statistics-back-end",
+  "name": "challenge-17-mongo",
   "version": "1.0.0",
   "description": "",
   "main": "dist/server.js",
@@ -11,7 +11,9 @@
     "start:dev": "npx nodemon"
   },
   "nodemonConfig": {
-    "watch": ["src"],
+    "watch": [
+      "src"
+    ],
     "ext": "ts,json,js",
     "exec": "npm run start"
   },
@@ -25,6 +27,6 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.96",
-    "typescript": "^5.5.4"
+    "typescript": "^5.8.2"
   }
 }
